# songs-researcher-CrewAI

./: README.md  pyproject.toml
output/: genre_research.md  top_rock_performers.md  trending_songs.md
src/songs_researcher/: crew.py  main.py
src/songs_researcher/config/: agents.yaml  tasks.yaml
