[project]
name = "songs_researcher"
version = "0.1.0"
description = "songs_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
songs_researcher = "songs_researcher.main:run"
run_crew = "songs_researcher.main:run"
train = "songs_researcher.main:train"
replay = "songs_researcher.main:replay"
test = "songs_researcher.main:test"
run_with_trigger = "songs_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
